# sfm

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  config.py  pyproject.toml  tox.ini
.github/workflows/: tag_and_publish.yml  test_lint_type.yml
dataset/reticle_model/: images_name.txt  points3D.txt
docs/source/: conf.py  index.rst  sfm.dataset.reticle_model.rst  sfm.dataset.rst  sfm.extractors.rst  sfm.matchers.rst  sfm.rst
src/sfm/: cli_feature.py  cli_localize.py  cli_match.py  config.py  extract_features.py  extract_features__.py  extract_features___.py  localization_pipeline.py  localize_sfm.py  localizer.py  main.py  match_features.py  pairs_from_exhaustive.py  reconstruct.py  scripts.py  test_scripts.py  visualize.py
src/sfm/dataset/reticle_model/: cameras.txt  images.txt  images_name.txt  points3D.txt
src/sfm/extractors/: superpoint.py
src/sfm/utils/: base_model.py  io.py  parsers.py  viz_3d.py
tests/: test_main.py
