[project]
name = "mypackage"
version = "0.1.0"

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mpetk==0.5.2.dev0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[[tool.uv.index]]
url = "http://eng-tools:3141/aibs/packages/+simple"

