[project]
name = "sfm"
version = "0.1.0"
authors = [
  { name = "Hanna Lee", email = "hanna.lee@alleninstitute.org" },
]
readme = "README.md"
requires-python = "~=3.8"
dependencies = [
  "pycolmap==3.11",
  plotly,
  opencv-python,
  h5py,
  Pillow,
  tqdm,
  "SuperGluePretrainedNetwork @ git+https://github.com/magicleap/SuperGluePretrainedNetwork.git",
  "lightglue @ git+https://github.com/cvg/LightGlue.git",
  "torch @ https://download.pytorch.org/whl/cpu/torch-2.1.0%2Bcpu-cp38-cp38-win_amd64.whl",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]